--- a/CC-Electron/src/renderer/styles/settings-section.css
+++ b/CC-Electron/src/renderer/styles/settings-section.css
@@ -8,6 +8,7 @@
 .setting-ctr {
     align-items: start;
     align-self: start;
+
     border: var(--stctr-bwidth) solid transparent;
     border-radius: var(--stctr-bradius);
     display: flex;
@@ -43,7 +44,6 @@
 
 .setting-pill {
     border-radius: var(--stpill-bradius);
-
     display: flex;
     flex: 0 0 fit-content;
     flex-flow: row nowrap;
@@ -63,13 +63,13 @@
 }
 
 .setting-pill > input, .setting-pill > select {
-    box-sizing: content-box;
     flex: 0 0 auto;
     padding-right: var(--stpill-inputselect-hpadding);
     padding-left: var(--stpill-inputselect-hpadding);
     width: var(--stpill-inputselect-width);
 
     background-color: var(--stpill-inputselect-bgcolor);
+    box-sizing: content-box;
     color: var(--stpill-inputselect-color);
 }
 
@@ -83,12 +83,13 @@
     width: var(--sttswitch-width);
 
     background-color: var(--sttswitch-bgcolor);
-    cursor: pointer;
     transition: var(--sttswitch-transition);
+
+    cursor: pointer;
 }
 
 .setting-toggle-switch > input {
-    display: none;
+    visibility: hidden;
 }
 
 .setting-toggle-switch:has(input:checked) {
@@ -109,7 +110,6 @@
     width: var(--sttswitch-svg-width);
 
     background-color: var(--sttswitch-svg-bgcolor);
-    transition: var(--sttswitch-svg-transition);
-
     fill: var(--sttswitch-svg-fill);
+    transition: var(--sttswitch-svg-transition);
 }
